--- a/src/WindowsUniversalApp/MainPage.xaml
+++ b/src/WindowsUniversalApp/MainPage.xaml
@@ -1,13 +1,13 @@
 ﻿<Page
-    x:Class="TestApp.MainPage"
+    x:Class="WindowsUniversalApp.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TestApp"
+    xmlns:local="using:WindowsUniversalApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock Text="Go to localhost:8080 in your browser." HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+        <TextBox TextWrapping="Wrap" Text="Go to http://localhost:18081" VerticalAlignment="Center" HorizontalAlignment="Center"/>
     </Grid>
 </Page>
