--- a/src/WindowsUniversalApp/MainPage.xaml
+++ b/src/WindowsUniversalApp/MainPage.xaml
@@ -7,7 +7,14 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBox TextWrapping="Wrap" Text="Go to http://localhost:18081" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+    <Grid Background="LightBlue">
+        
+
+
+        
+        <WebView Source="http://localhost:18081" />
+        
     </Grid>
+
+    
 </Page>
